github backend in config.yml

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: kyleroden/roden-meals-gatsby
   branch: master
   commit_messages:
     create: 'Create {{collection}} “{{slug}}”'
